# vkbot-starostat

./: .env  .gitignore  Makefile  README.md  consts.py  db_interface.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  vkbot.py
deploy/backend/: Dockerfile
src/: Makefile  alembic.ini  main.py  pyproject.toml  settings.py
src/app/: broadcast.py  db.py  exceptions.py  routes.py  schema.py  utils.py  vk.py
src/app/bot/: __init__.py  admin.py  broadcast.py  common.py  messages.py
src/app/bot/tests/: test_broadcast.py  test_common.py
src/app/migrations/: env.py
src/app/migrations/versions/: db97ecac1af7_.py
src/app/tests/: conftest.py  test_broadcast.py  test_db.py  test_fastapi.py  test_utils.py
src/configs/: .coveragerc  bandit.yaml  pytest.ini
