[tool.poetry]
name = "starostat"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.22"}
uvicorn = "^0.23.2"
vkbottle = "^4.3.12"
alembic = "^1.12.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
asyncpg = "^0.28.0"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
bandit = "^1.7.5"
radon = "^6.0.1"
vkbottle-types = "^5.131.146.16"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.1"
types-sqlalchemy = "^1.4.53.38"
pytest-lazy-fixtures = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
format = "pylint"
show-source = true
statistics = true
count = true
exclude = ".venv"
max-complexity = 10

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
]
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 79
exclude = ".venv"

